Squash merge continuation-controller-setup into main
