# docs/swagger.yaml
@@ -1,4 +1,62 @@
 definitions:
+  interfaces.StatusDetailDTO:
+    properties:
+      created_at:
+        type: string
+      status:
+        type: string
+      status_description:
+        type: string
+      task_id:
+        type: integer
+      updated_by:
+        type: string
+    type: object
+  interfaces.StatusHistoryResponseDTO:
+    properties:
+      history:
+        items:
+          $ref: '#/definitions/interfaces.StatusDetailDTO'
+        type: array
+      message:
+        type: string
+      success:
+        type: boolean
+      total_count:
+        type: integer
+    type: object
+  interfaces.TaskDetailDTO:
+    properties:
+      client_id:
+        type: string
+      client_name:
+        type: string
+      department:
+        type: string
+      email:
+        type: string
+      id:
+        type: integer
+      is_active:
+        type: boolean
+      name:
+        type: string
+      position:
+        type: string
+    type: object
+  interfaces.TasksResponseDTO:
+    properties:
+      message:
+        type: string
+      success:
+        type: boolean
+      tasks:
+        items:
+          $ref: '#/definitions/interfaces.TaskDetailDTO'
+        type: array
+      total_count:
+        type: integer
+    type: object
   schemas.TaskImportResponse:
     properties:
       errors:
@@ -54,4 +112,50 @@ paths:
       summary: Import tasks from CSV
       tags:
       - commands
+  /api/queries/tasks/active:
+    get:
+      description: Retrieves all active tasks for a specific client
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/interfaces.TasksResponseDTO'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/interfaces.TasksResponseDTO'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/interfaces.TasksResponseDTO'
+      security:
+      - Bearer: []
+      summary: Get active tasks for a client
+      tags:
+      - queries
+  /api/queries/tasks/history:
+    get:
+      description: Retrieves the status history of all tasks for a client
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/interfaces.StatusHistoryResponseDTO'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/interfaces.StatusHistoryResponseDTO'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/interfaces.StatusHistoryResponseDTO'
+      security:
+      - Bearer: []
+      summary: Get task status history for a client
+      tags:
+      - queries
 swagger: "2.0"
